--- a/WorkFlowDesigner/WorkFlowDesigner.csproj
+++ b/WorkFlowDesigner/WorkFlowDesigner.csproj
@@ -75,6 +75,12 @@
     <Compile Include="AddFlowPanel.Designer.cs">
       <DependentUpon>AddFlowPanel.cs</DependentUpon>
     </Compile>
+    <Compile Include="AddListItem.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="AddListItem.Designer.cs">
+      <DependentUpon>AddListItem.cs</DependentUpon>
+    </Compile>
     <Compile Include="Attribute.cs" />
     <Compile Include="Flow.cs" />
     <Compile Include="Form1.cs">
@@ -98,6 +104,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="AddFlowPanel.resx">
       <DependentUpon>AddFlowPanel.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="AddListItem.resx">
+      <DependentUpon>AddListItem.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
