--- a/WorkFlowDesigner/WorkFlowDesigner.csproj
+++ b/WorkFlowDesigner/WorkFlowDesigner.csproj
@@ -91,8 +91,10 @@
     </Compile>
     <Compile Include="InitNH.cs" />
     <Compile Include="ListElement.cs" />
+    <Compile Include="MapFlow.cs" />
     <Compile Include="MapStepCondition.cs" />
     <Compile Include="MapUser.cs" />
+    <Compile Include="NHibernateOperation.cs" />
     <Compile Include="Position.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
