--- a/WorkFlowDesigner/WorkFlowDesigner.csproj
+++ b/WorkFlowDesigner/WorkFlowDesigner.csproj
@@ -63,54 +63,54 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AddAtribute.cs">
+    <Compile Include="Forms\AddAtribute.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="AddAtribute.Designer.cs">
+    <Compile Include="Forms\AddAtribute.Designer.cs">
       <DependentUpon>AddAtribute.cs</DependentUpon>
     </Compile>
-    <Compile Include="AddFlowPanel.cs">
+    <Compile Include="Forms\AddFlowPanel.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="AddFlowPanel.Designer.cs">
+    <Compile Include="Forms\AddFlowPanel.Designer.cs">
       <DependentUpon>AddFlowPanel.cs</DependentUpon>
     </Compile>
-    <Compile Include="AddListItem.cs">
+    <Compile Include="Forms\AddListItem.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="AddListItem.Designer.cs">
+    <Compile Include="Forms\AddListItem.Designer.cs">
       <DependentUpon>AddListItem.cs</DependentUpon>
     </Compile>
-    <Compile Include="Attribute.cs" />
-    <Compile Include="Flow.cs" />
-    <Compile Include="Form1.cs">
+    <Compile Include="ClassDatabase\Attribute.cs" />
+    <Compile Include="ClassDatabase\Flow.cs" />
+    <Compile Include="Forms\Form1.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
+    <Compile Include="Forms\Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
-    <Compile Include="InitNH.cs" />
-    <Compile Include="ListElement.cs" />
-    <Compile Include="MapFlow.cs" />
-    <Compile Include="MapStepCondition.cs" />
-    <Compile Include="MapUser.cs" />
-    <Compile Include="NHibernateOperation.cs" />
-    <Compile Include="Position.cs" />
+    <Compile Include="ClassNH\InitNH.cs" />
+    <Compile Include="ClassDatabase\ListElement.cs" />
+    <Compile Include="ClassNH\MapFlow.cs" />
+    <Compile Include="ClassNH\MapStepCondition.cs" />
+    <Compile Include="ClassNH\MapUser.cs" />
+    <Compile Include="ClassNH\NHibernateOperation.cs" />
+    <Compile Include="ClassDatabase\Position.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Step.cs" />
-    <Compile Include="StepCondition.cs" />
-    <Compile Include="User.cs" />
-    <EmbeddedResource Include="AddAtribute.resx">
+    <Compile Include="ClassDatabase\Step.cs" />
+    <Compile Include="ClassDatabase\StepCondition.cs" />
+    <Compile Include="ClassDatabase\User.cs" />
+    <EmbeddedResource Include="Forms\AddAtribute.resx">
       <DependentUpon>AddAtribute.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="AddFlowPanel.resx">
+    <EmbeddedResource Include="Forms\AddFlowPanel.resx">
       <DependentUpon>AddFlowPanel.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="AddListItem.resx">
+    <EmbeddedResource Include="Forms\AddListItem.resx">
       <DependentUpon>AddListItem.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Form1.resx">
+    <EmbeddedResource Include="Forms\Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\licenses.licx" />
@@ -135,6 +135,7 @@
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it.
        Other similar extension points exist, see Microsoft.Common.targets.
