--- a/WorkFlowDesigner/WorkFlowDesigner.csproj
+++ b/WorkFlowDesigner/WorkFlowDesigner.csproj
@@ -63,6 +63,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ClassNH\MapPosition.cs" />
+    <Compile Include="ClassNH\MapStep.cs" />
     <Compile Include="Forms\AddAtribute.cs">
       <SubType>Form</SubType>
     </Compile>
