--- a/WorkFlowDesigner/WorkFlowDesigner.csproj
+++ b/WorkFlowDesigner/WorkFlowDesigner.csproj
@@ -63,12 +63,20 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ClassDatabase\Access.cs" />
     <Compile Include="ClassDatabase\Document.cs" />
+    <Compile Include="ClassNH\MapAccess.cs" />
     <Compile Include="ClassNH\MapAttribute.cs" />
     <Compile Include="ClassNH\MapDocument.cs" />
     <Compile Include="ClassNH\MapListElement.cs" />
     <Compile Include="ClassNH\MapPosition.cs" />
     <Compile Include="ClassNH\MapStep.cs" />
+    <Compile Include="Forms\DefineFlow.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\DefineFlow.Designer.cs">
+      <DependentUpon>DefineFlow.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\AddAtribute.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -89,6 +97,21 @@
     </Compile>
     <Compile Include="ClassDatabase\Attribute.cs" />
     <Compile Include="ClassDatabase\Flow.cs" />
+    <Compile Include="Forms\AddPosition.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\AddPosition.Designer.cs">
+      <DependentUpon>AddPosition.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\EnterDescription.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\EnterDescription.Designer.cs">
+      <DependentUpon>EnterDescription.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\FlowLabel.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="Forms\Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -102,11 +125,21 @@
     <Compile Include="ClassNH\MapUser.cs" />
     <Compile Include="ClassNH\NHibernateOperation.cs" />
     <Compile Include="ClassDatabase\Position.cs" />
+    <Compile Include="Forms\StepSet.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\StepSet.Designer.cs">
+      <DependentUpon>StepSet.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ClassDatabase\Step.cs" />
     <Compile Include="ClassDatabase\StepCondition.cs" />
     <Compile Include="ClassDatabase\User.cs" />
+    <Compile Include="Forms\StepView.cs" />
+    <EmbeddedResource Include="Forms\DefineFlow.resx">
+      <DependentUpon>DefineFlow.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Forms\AddAtribute.resx">
       <DependentUpon>AddAtribute.cs</DependentUpon>
     </EmbeddedResource>
@@ -116,8 +149,17 @@
     <EmbeddedResource Include="Forms\AddListItem.resx">
       <DependentUpon>AddListItem.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Forms\AddPosition.resx">
+      <DependentUpon>AddPosition.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\EnterDescription.resx">
+      <DependentUpon>EnterDescription.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Forms\Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\StepSet.resx">
+      <DependentUpon>StepSet.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\licenses.licx" />
     <EmbeddedResource Include="Properties\Resources.resx">
@@ -131,6 +173,10 @@
     </Compile>
     <None Include="packages.config" />
     <None Include="Properties\DataSources\Attribute.datasource" />
+    <None Include="Properties\DataSources\Position1.datasource" />
+    <None Include="Properties\DataSources\Step.datasource" />
+    <None Include="Properties\DataSources\StepCondition.datasource" />
+    <None Include="Properties\DataSources\StepView.datasource" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
